--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,13 +19,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: example
     volumes:
+      - ./src:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
 
 volumes:
   mysql-data:
