--- a/server3/docker-compose.yml
+++ b/server3/docker-compose.yml
@@ -1,30 +1,35 @@
-version: '3'
-services:
-  php-apache:
-    container_name: php-apache
-    build: apache-php
-    volumes:
-      - ./apache-php/src:/var/www/html-dynamic
-    ports:
-      - 8081:8081
-  nginx:
-    container_name: nginx
-    build: nginx
-    volumes:
-      - ./nginx/src:/usr/share/nginx/html-static
-    ports:
-      - 8082:8082
-  db:
-    image: mysql
-    command: --init-file /data/application/init.sql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: appDb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: example
-    volumes:
-      - ./db/init.sql:/data/application/init.sql
+version: "3.9"
 
-volumes:
-  mysql-data:
+services:
+  db:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d
+
+  nginx:
+    build: ./nginx
+    volumes:
+      - ./nginx/src:/etc/nginx/html/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8080:80"
+    links:
+      - db
+      - apache
+
+  apache:
+    build: ./apache-php
+    volumes:
+      - ./apache-php/src:/var/www/html/
+      - ./apache-php/000-default.conf:/etc/apache2/sites-available/000-default.conf
+    ports:
+      - "8081:80"
+    links:
+      - db
